--- a/templates/index.html
+++ b/templates/index.html
@@ -2,15 +2,16 @@
 <html>
 
 
-  <body>
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-8  offset-lg-2">
-                <h3 class="mt-5">Live Streaming</h3>
-                <img src="{{ url_for('video_feed') }}" width="100%">
-            </div>
-        </div>
-    </div>
+    <body>
+        <h1>Attendance system</h1>
+
+        <form action="/mark" method='post'>
+            <input type="submit" value="Mark Attendance">
+        </form>
+
+        <form action="/download" method='post'>
+            <input type="submit" value="Download Attendance">
+        </form>
     </body>
 
 
