added date column in sql

--- a/templates/attendance.html
+++ b/templates/attendance.html
@@ -4,8 +4,9 @@
             <h1>
                 Select the date of Attendance
             </h1>
-            <input type="date" id="date" value="2017-06-01">
+            
             <form action="/view" method='post'>
+                <input type="date" id="date" name="date">
                 <input type="submit" value="View">
             </form>
         </body>
