--- a/templates/view.html
+++ b/templates/view.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        Attendance is shown below
+        Attendance of {{ dates }} is shown below
     </head>
     <body>
         <table> 
