added condition check before writing in table

--- a/templates/view.html
+++ b/templates/view.html
@@ -20,5 +20,9 @@
                 {% endfor %} 
             </tbody> 
         </table>
+        <form action="\mailsent" method=POST>
+            <input type="email" id="email" name="email" value="example@gmail.com">
+
+        </form>
     </body>
 </html> 
