--- a/templates/view.html
+++ b/templates/view.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
-        Attendance of {{ dates }} is shown below
+        <h1>
+            Attendance of {{ dates }} is shown below
+        </h1>
     </head>
     <body>
         <table> 
@@ -21,8 +23,9 @@
             </tbody> 
         </table>
         <form action="\mailsent" method=POST>
-            <input type="email" id="email" name="email" value="example@gmail.com">
-
+            <label for = "email" >Enter your email</label><br>
+            <input type="email" id="email" name="email">
         </form>
+        
     </body>
 </html> 
