--- a/templates/mark.html
+++ b/templates/mark.html
@@ -2,12 +2,12 @@
 <html>
 
 
-  <body>
+  <body bgcolor="blue">
     <div class="container">
         <div class="row">
             <div class="col-lg-8  offset-lg-2">
-                <h3 class="mt-5">Marking attendance</h3>
-                <img src="{{ url_for('video_feed') }}" width="100%">
+                <h1 class="mt-5" align = "center">Marking attendance</h1>
+                <img src="{{ url_for('video_feed') }}" width="50%" style = "float: middle;">
             </div>
         </div>
     </div>
