--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html>
+    <style>
+        h1{ text-align: center; }
+    </style>
 
 
     <body>
-        <h1>Attendance system</h1>
+        <h1> Welcome to Attendance system</h1>
 
         <form action="/mark" method='post'>
             <input type="submit" value="Mark Attendance">
