--- a/templates/view.html
+++ b/templates/view.html
@@ -22,9 +22,10 @@
                 {% endfor %} 
             </tbody> 
         </table>
-        <form action="\mailsent" method=POST>
+        <form action="\send_mail" method=POST>
             <label for = "email" >Enter your email</label><br>
             <input type="email" id="email" name="email">
+            <input type="submit" id="send" name="send">
         </form>
         
     </body>
