--- a/templates/mark.html
+++ b/templates/mark.html
@@ -1,16 +1,10 @@
-<!DOCTYPE html>
 <html>
-
-
-  <body bgcolor="blue">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-8  offset-lg-2">
-                <h1 class="mt-5" align = "center">Marking attendance</h1>
-                <img src="{{ url_for('video_feed') }}" width="50%" style = "float: middle;">
-            </div>
-        </div>
-    </div>
+  <head>
+    <link rel="stylesheet" href="{{ url_for('static',filename='style/looks.css') }}">
+  </head>
+  <body>
+        <h1>Marking attendance</h1>
+            <img class="center" src="{{ url_for('video_feed') }}" width="50%" style = "float: middle;">
     </body>
 
 
