--- a/templates/view.html
+++ b/templates/view.html
@@ -1,29 +1,31 @@
-<!DOCTYPE html>
 <html>
     <head>
+        <link rel="stylesheet" href="{{url_for('static',filename='style/looks.css')}}">
         <h1>
             Attendance of {{ dates }} is shown below
+            <hr>
         </h1>
     </head>
     <body>
-        <table> 
+        <table class="center"> 
             <thead> 
             <tr> 
                 <th>Name</th> 
                 <th>Time</th> 
             </tr> 
             </thead> 
-            <tbody> 
-                {% for row in value %}  
-                    <tr> 
-                        <td>{{row[0]}}</td> 
-                        <td>{{row[1]}}</td> 
-                    </tr> 
-                {% endfor %} 
-            </tbody> 
+                <tbody> 
+                    {% for row in value %}  
+                        <tr> 
+                            <td>{{row[0]}}</td> 
+                            <td>{{row[1]}}</td> 
+                        </tr> 
+                    {% endfor %} 
+                </tbody> 
         </table>
+        <hr>
         <form action="\send_mail" method=POST>
-            <label for = "email" >Enter your email</label><br>
+            <h3>Enter your email</h3>
             <input type="email" id="email" name="email">
             <input type="submit" id="send" name="send">
         </form>
